# Eucalypt-Kernel

./: .gitattributes  .gitignore  Cargo.toml  GNUmakefile  build.sh  limine.conf  linker-x86_64.ld
ahci/: Cargo.toml
ahci/src/: lib.rs  types.rs
bare_x86_64/src/cpu/: apic.rs
edk2-ovmf/: ovmf-code-ia32.fd
framebuffer/src/: lib.rs
gdt/: Cargo.toml
gdt/src/: lib.rs
kernel/: .gitignore  Cargo.toml  GNUmakefile  build.rs
kernel/src/: elf.rs  idt.rs  jump.asm  keyboard.rs  lib.rs  main.rs  mp.rs
memory/: Cargo.toml
memory/src/: addr.rs  allocator.rs  frame_allocator.rs  hhdm.rs  lib.rs  mmio.rs  paging.rs  vmm.rs
nvme/: Cargo.toml
nvme/src/: lib.rs
pci/src/: lib.rs
ports/newlib/: config.sub  configure
ports/newlib-build/: Makefile  config.status
ports/newlib-build/etc/: Makefile  config.cache  config.status
ports/newlib-build/x86_64-myos/libgloss/: Makefile  config.cache  config.status
ports/newlib-build/x86_64-myos/libgloss/libnosys/.deps/: _exit.Po  chown.Po  close.Po  environ.Po  errno.Po  execve.Po  (+19 more)
ports/newlib-build/x86_64-myos/newlib/: config.cache  config.status
ports/newlib-build/x86_64-myos/newlib/doc/: makedoc
ports/newlib/newlib/: configure.host
ports/newlib/newlib/libc/: acinclude.m4
ports/newlib/newlib/libc/sys/: Makefile.inc
ports/sysroot/share/info/: dir  porting.info
ports/sysroot/x86_64-myos/include/: newlib.h
process/: Cargo.toml
process/src/: lib.rs  proc.rs  scheduler.rs  switch.asm  thread.rs  threads.rs
process/src/old/: proc.rs
ramfs/src/: lib.rs
sched/src/: lib.rs
syscall/: Cargo.toml
syscall/src/: syscall_handler.rs
test_userspace/: INIT  main.c  user.ld
tty/: Cargo.toml
tty/src/: lib.rs
usb/src/: lib.rs
vfs/src/: lib.rs
z_files_to_copy/: INIT
(+1049 files in other folders)
