[workspace]
members = ["ahci","framebuffer", "eucalypt_fs", "ide", "pci", "kernel", "bare_x86_64", "process", "memory", "usb", "fat12", "vfs", "ramfs"]
resolver = "2"

[profile.dev]
opt-level = 1

panic="abort"

[workspace.dependencies]
# External Dependencies
x86_64 = "0.15.4"
limine = "0.6.3"
uart_16550 = "0.6.0"
spin = "0.10.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

# Eucalypt crates
ahci =        { path = "./ahci" }
framebuffer = { path = "./framebuffer" }
ide =         { path = "./ide" }
pci =         { path = "./pci" }
bare_x86_64 = { path = "./bare_x86_64" }
eucalypt_fs = { path = "./eucalypt_fs" }
process =     { path = "./process" }
memory =      { path = "./memory" }
usb =         { path = "./usb" }
#syscall =     { path = "./syscall" }
fat12 =       { path = "./fat12" }
vfs =         { path = "./vfs" }
ramfs =       { path = "./ramfs" }