[package]
name = "eucalypt_os"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = { workspace = true }
x86_64 = { workspace = true }
uart_16550 = { workspace = true }
framebuffer =  { workspace = true }
ide = { workspace = true}
eucalypt_fs = { workspace = true }
ahci = { workspace = true }
pci = { workspace = true }
bare_x86_64 = { workspace = true }
process = { workspace = true }
memory = { workspace = true }
usb = { workspace = true }
#syscall = { workspace = true }
fat12 = { workspace = true }
vfs = { workspace = true }
ramfs = { workspace = true }

pic8259 = "0.11.0"
spin = { workspace = true }

[build-dependencies]
cc = "1.2.43"
nasm-rs = "0.3.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
